syntax = "proto3";

package remotewallet.v1alpha1;

import "google/api/annotations.proto";
import "eth/v1alpha1/attestation.proto";
import "eth/v1alpha1/beacon_block.proto";

option csharp_namespace = "Ethereum.Wallet.v1alpha1";
option go_package = "wallet/v1alpha1;remotewallet";
option java_multiple_files = true;
option java_outer_classname = "RemoteWalletProto";
option java_package = "github.com.alonmuroch.remoetwallet.v1alpha1";
option php_namespace = "Ethereum\\Wallet\\v1alpha1";


// Remote wallet service for Prysm's validator client.
service RemoteWallet {
    rpc FetchValidatingKeys (FetchValidatingKeysRequest) returns (FetchValidatingKeysResponse) {
        option (google.api.http) = {
            get: "/wallet/v1alpha1/keys/all"
        };
    }

    // part of the protected keymanager interface, has the responsibility to prevent sig req that could slash
    rpc SignAttestation (SignAttestationRequest) returns (SignResponse) {
        option (google.api.http) = {
            get: "/wallet/v1alpha1/keys/sign/attestation"
        };
    }

    // part of the protected keymanager interface, has the responsibility to prevent sig req that could slash
    rpc SignProposal (SignProposalRequest) returns (SignResponse) {
        option (google.api.http) = {
            get: "/wallet/v1alpha1/keys/sign/proposal"
        };
    }

    // part of the protected keymanager interface, has the responsibility to prevent sig req that could slash
    rpc SignSlot (SignSlotRequest) returns (SignResponse) {
        option (google.api.http) = {
            get: "/wallet/v1alpha1/keys/sign/slot"
        };
    }
}

message FetchValidatingKeysResponse {
    repeated bytes public_keys = 1;
}

message FetchValidatingKeysRequest {
}

message SignResponse {
    bytes sig = 1;
    SignResponseStatus status = 2;
}

message SignAttestationRequest {
    bytes public_key = 1;
    uint64 domain = 2;
    ethereum.eth.v1alpha1.AttestationData data = 3;
}

message SignProposalRequest {
    bytes public_key = 1;
    uint64 domain = 2;
    ethereum.eth.v1alpha1.BeaconBlockHeader data = 3;
}

message SignSlotRequest {
    bytes public_key = 1;
    uint64 domain = 2;
    bytes slot = 3;
}

enum SignResponseStatus {
    SIGNED = 0;
    UNKNOWN_PUB_KEY = 1;
    ALREADY_SIGNED = 2;
}